--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- весь HTML и CSS код я скопировал с шаблонного сайта, с небольшими изменениями названия класса =) -->
+<!-- all the HTML and CSS code I copied from a template website, with minor changes of the class name =) -->
 <html>
   <head>
     <meta charset="utf-8">
@@ -9,7 +11,7 @@
     <!-- header -->
     <h1>Discover hidden places in the world around you</h1>
 
-    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
 
     <video autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
@@ -27,12 +29,12 @@
 
     <h2>Coming Soon for iPhone and Android</h2>
 
-    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
 
     <!-- footer -->
     <div class="footer">
       <p>&copy; Excursion</p>
     </div>
-    
+
   </body>
 </html>
