include comments into html code

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
 
-    <!-- footer -->
+    <!-- footer, &copy - символ копирайта (the copyright symbol) -->
     <div class="footer">
       <p>&copy; Excursion</p>
     </div>
