--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion Project</title>
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <!-- header -->
